update jvm parameter list